# EffekseerForCocos2d-x-v3

./: CMakeLists.txt  README.md
Effekseer/: EffekseerNative.cpp  EffekseerRendererNative.cpp  EffekseerRendererNative.h
